--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  YY XX Automatic redirection failed, please go to <a href=
+  AA YY XX Automatic redirection failed, please go to <a href=
   "../../doc/html/boostbook.html">../../doc/html/boostbook.html</a>
 </body>
 </html>
